--- a/index.html
+++ b/index.html
@@ -1,17 +1,5 @@
 <html>
-  <body>
-    <form method="post" action="calculator.php">
-      <input type="text" name="num1" placeholder="Number 1">
-      <input type="text" name="num2" placeholder="Number 2">
-      <select name="operator">
-        <option>None</option>
-        <option>Add</option>
-        <option>Subtract</option>
-        <option>Multiply</option>
-        <option>Divide</option>
-      </select>
-      <br>
-      <input type="submit" name="submit" value="Calculate">
-    </form>
-  </body>
+	<body>
+		<input name="submit" value="Calculate">
+	</body>
 </html>
