--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 	<body>
-		<input name="submit" value="Calculate">
+		<input type="button" href="https://lin.ee/CuWiFFb"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" name="เพิ่มเพื่อน" value="Calculate">
 	</body>
 </html>
