--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- @Korn -->
 <html>
 	<body>
 		<a href="https://lin.ee/CuWiFFb"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="เพิ่มเพื่อน" height="36" border="0"></a>
