--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 				<div class="col-sm-12">
 					<form class="form-signin " id="postuser" style="opacity:0.85;" action="" >
 						<!-- br><h1 class="h4 mb-3 font-weight-normal text-muted">สมัครสมาชิก</h1><br -->
-							<a href="https://lin.ee/CuWiFFb"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="สมัครส
-								มาชิก" border="0"></a>
+							<!-- a href="https://lin.ee/CuWiFFb"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="สมัครส
+								มาชิก" border="0"></a -->
+							<button class="btn btn-lg btn-warning btn-block" type="button">สมัครสมาชิก</button>
 					</form>
 				</div>
 			</div>
