--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<!-- br><h1 class="h4 mb-3 font-weight-normal text-muted">สมัครสมาชิก</h1><br -->
 							<!-- a href="https://lin.ee/CuWiFFb"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="สมัครส
 								มาชิก" border="0"></a -->
-							<button class="btn btn-lg btn-warning btn-block" type="button" href="https://lin.ee/lV1nBbb">สมัครสมาชิก</button>
+							<button class="btn btn-lg btn-warning btn-block" type="button"><a href="https://lin.ee/lV1nBbb">สมัครสมาชิก</button>
 					</form>
 				</div>
 			</div>
