--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link href="assets/css/bootstrap.min.css"  rel="stylesheet" crossorigin="anonymous">
         <style>
             body {
-                    background-image: url('img/bg.png');
+                    background-image: url('img/325309899_1355967355206744_4663652798952020104_n.jpg');
             }
         </style>
 		
