--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<picture>
 						<!-- source media="(min-width:650px)" srcset="img_pink_flowers.jpg">
 						<source media="(min-width:465px)" srcset="img_white_flower.jpg"-->
-						<img src="img/cat.jpg" alt="Flowers" style="width:auto;">
+						<!-- img src="img/cat.jpg" alt="Flowers" style="width:auto;" -->
 					</picture>
 				</div>
 			</div>
