--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link href="assets/css/bootstrap.min.css"  rel="stylesheet" crossorigin="anonymous">
         <style>
             body {
-                    background-image: url('สล๊อต2222.jpg');
+                    background-image: url('img/bg1.jpg');
             }
         </style>
 		
