--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <style>
             body {
                     background-image: url('img/bg1.jpg');
+		    background-size: 100% 100%;
             }
         </style>
 		
