--- a/index.html
+++ b/index.html
@@ -25,25 +25,12 @@
     </head>
     <body class="text-center">
         <div class="col-sm-12">
-			<div class="col-sm-12">
-			</div>
 			<div class="row">
 				<div class="col-sm-12">
-					<picture>
-						<!-- source media="(min-width:650px)" srcset="img_pink_flowers.jpg">
-						<source media="(min-width:465px)" srcset="img_white_flower.jpg"-->
-						<!-- img src="img/cat.jpg" alt="Flowers" style="width:auto;" -->
-					</picture>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-12">
-					<form class="form-signin " id="postuser" style="opacity:0.85;" action="" >
-						<!-- br><h1 class="h4 mb-3 font-weight-normal text-muted">สมัครสมาชิก</h1><br -->
-							<!-- a href="https://lin.ee/CuWiFFb"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/th.png" alt="สมัครส
-								มาชิก" border="0"></a -->
+					<a href="https://lin.ee/lV1nBbb"><button class="btn btn-lg btn-warning btn-block" type="button">สมัครสมาชิก</button>
+					<!-- form class="form-signin " id="postuser" style="opacity:0.85;" action="" >
 							<a href="https://lin.ee/lV1nBbb"><button class="btn btn-lg btn-warning btn-block" type="button">สมัครสมาชิก</button>
-					</form>
+					</form -->
 				</div>
 			</div>
 		</div>
