--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <div class="col-sm-12">
 			<div class="row">
 				<div class="col-sm-12">
+					<form class="form-signin " id="postuser" style="opacity:0.85;" action="" >
+						<a href="https://lin.ee/lV1nBbb"><button class="btn btn-lg btn-warning btn-block" type="button">สมัครสมาชิก</button>
+					</form >
 					<a href="https://lin.ee/lV1nBbb"><button class="btn btn-lg btn-warning btn-block" type="button">สมัครสมาชิก</button>
 					<!-- form class="form-signin " id="postuser" style="opacity:0.85;" action="" >
 							<a href="https://lin.ee/lV1nBbb"><button class="btn btn-lg btn-warning btn-block" type="button">สมัครสมาชิก</button>
