--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<form class="form-signin " id="postuser" style="opacity:0.85;" action="" >
 						<a href="https://lin.ee/lV1nBbb"><button class="btn btn-lg btn-warning btn-block" type="button">สมัครสมาชิก</button>
 					</form >
-					<a href="https://lin.ee/lV1nBbb"><button class="btn btn-lg btn-warning btn-block" type="button">สมัครสมาชิก</button>
+					<!-- a href="https://lin.ee/lV1nBbb"><button class="btn btn-lg btn-warning btn-block" type="button">สมัครสมาชิก</button -->
 					<!-- form class="form-signin " id="postuser" style="opacity:0.85;" action="" >
 							<a href="https://lin.ee/lV1nBbb"><button class="btn btn-lg btn-warning btn-block" type="button">สมัครสมาชิก</button>
 					</form -->
