--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 
 <body>
     <div class="login-form">
-	<div hidden>555</div>
-        <img class="logo" src="bg2.jpg" hidden>
+	<div hidden><img class="logo" src="bg2.jpg" hidden></div>
         <!-- div><a href=""><button class="btn btn-web">สมัครสมาชิก website</button></a></div>
         <div class="or">or</div -->
         <div><a href="https://lin.ee/lV1nBbb"><button class="btn btn-line">สมัครสมาชิก</button></a></div>
